my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EEXTERN/T_EEXTERN-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EEXTERN_STRUCT_H
#define T_EEXTERN_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EEXTERN(void);


#endif /* not T_EEXTERN_STRUCT_H */
